[gd_scene load_steps=2 format=3 uid="uid://bq48alco6avh5"]

[ext_resource type="Script" path="res://question_popup.gd" id="1_question"]

[node name="QuestionPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_question")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Question will appear here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 24

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExplanationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Explanation will appear here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"
theme_override_font_sizes/font_size = 20

